fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Transportation_Tips__c.field-meta.xml
<CustomField>
    <fullName>Total_Transportation_Tips__c</fullName>
    <formula>Transportation_Tips__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Transportation Tips)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>