fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/TotalPresentation__c.field-meta.xml
<CustomField>
    <fullName>TotalPresentation__c</fullName>
    <formula>Reimbursement_Rate__c * (0.5* PresentationPrepTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Presentation Prep Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>