fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Travel_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Travel_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Eligible</label>
    <type>Checkbox</type>
</CustomField>