fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <inlineHelpText>Travel Time, 4 hr maximum</inlineHelpText>
    <label>Travel Time (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>