fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/TravelRate__c.field-meta.xml
<CustomField>
    <fullName>TravelRate__c</fullName>
    <label>Travel Time Rate</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>