fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Type_of_Inservice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Inservice__c</fullName>
    <label>Type of Inservice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>