fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>Clinical_Educator_Name__r.Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor #</label>
    <type>Text</type>
</CustomField>