fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Workflow_Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Mileage_Rate__c</fullName>
    <formula>Education_Record__r.Milage_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Mileage Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>