fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Workflow_Travel_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Travel_Eligible__c</fullName>
    <formula>Pay_Rate_Card__r.Travel_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Travel Eligible</label>
    <type>Checkbox</type>
</CustomField>