fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/recordTypes/Education_Record.recordType-meta.xml
<RecordType>
    <fullName>Education_Record</fullName>
    <active>true</active>
    <label>Education Record</label>
</RecordType>