fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/recordTypes/Education_Record_Submitted.recordType-meta.xml
<RecordType>
    <fullName>Education_Record_Submitted</fullName>
    <active>true</active>
    <label>Education Record Submitted</label>
</RecordType>