fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/validationRules/Mising_Hourly_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Mising_Hourly_Rate</fullName>
    <active>false</active>
    <description>Disabled for the new 2018 reimbursement process 18Jan2018 - ESC
Hello Future!</description>
    <errorConditionFormula>ISNULL(Clinical_Educator_Name__r.Hourly_Rate__c )</errorConditionFormula>
    <errorMessage>In order to create an education record, The Clinical Contact must have an hourly rate.   Please contact Clinical Affairs.</errorMessage>
</ValidationRule>