fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/validationRules/Status_change_to_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_change_to_active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Submit CRF&quot;), NOT(CRF_CE_Status__c =&quot;Active&quot; ) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The CE must be in an &quot;Active&quot; status to submit an Education Record</errorMessage>
</ValidationRule>