fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/validationRules/Submit_without_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_without_required_fields</fullName>
    <active>true</active>
    <description>Temp validation rule for existing CE records without Business, Med License information</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c ,&quot;Submit CRF&quot;),OR( ISBLANK(Clinical_Educator_Name__r.Business_Address__c), 
 ISBLANK(Clinical_Educator_Name__r.Business_City__c), 
ISBLANK( Clinical_Educator_Name__r.Business_State__c), 
ISBLANK( Clinical_Educator_Name__r.Business_Zip__c), 
ISBLANK(Clinical_Educator_Name__r.Hospital_Practice_Name__c), 
ISBLANK( Clinical_Educator_Name__r.Medical_License__c), 
 ISBLANK(Clinical_Educator_Name__r.State_of_License__c)))</errorConditionFormula>
    <errorMessage>Please edit the Clinical Educator record for missing required fields: Business Address,  Hospital/Practice Name, and/or Medical License information.</errorMessage>
</ValidationRule>